<resources>
    <string name="app_name">Map-eirb</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_selection_screen">SelectionScreenActivity</string>
    <string name="title_activity_information_list">InformationListActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="selection_screen_title">Services</string>
    <string name="icon_toilets">&#xe900;</string>
    <string name="icon_internet_access">&#xf1eb;</string>
    <string name="icon_defibrillator">&#xf21e;</string>
    <string name="icon_electric_car">&#xf1e6;</string>
    <string name="sort_name">Trier par nom</string>
    <string name="sort_distance">Trier par distance</string>

    <string name="icon_list">&#xf03a;</string>
    <string name="question_mark">\?</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="error_popup_title">Erreur</string>
    <string name="error_popup_poi_not_retrieved_msg">Impossible de récupérer les informations à propos des points d\'intérêt. Peut-être vous n\'etes pas connectés à internet.</string>
    <string name="error_popup_msg_not_connected">Appareil non connecté à internet. Connectez vous et rééssayez.</string>
    <string name="help_popup_title">Aide</string>
    <string name="help_popup_msg">Cette application permet de localiser des points d\'intérêt dans Bordeaux. Touchez un des points ci-dessous pour afficher respectivement :\n- Les stations de recharge de voitures électriques\n- Les défibrillateurs publics\n- Les points d\'accès à internet\n- Les toilettes publiques\n\nUne fois sur la carte, vous pouvez toucher l\'icône de liste en haut à droite de l\'écran pour afficher la liste des points d\'intérêt de la catégorie sélectionnée.</string>
    <string name="defibrilator_name">Défibrillateur</string>
    <string name="electric_name">Bornes électriques</string>
    <string name="toilettes_name">Toilettes</string>
    <string name="internet_name">Points Internet</string>
    <string name="poi_name">poi</string>
    <string name="ok">OK</string>
    <string name="loading_popup_msg">Chargement. Veuillez patienter…</string>
    <string name="cancel">Annuler</string>

</resources>
