<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.example.enseirb.timtim.mapeirb.presenter.activities.ExampleActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/wallet_highlighted_text_holo_dark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:showIn="@layout/activity_selection_screen"
        tools:context="com.example.enseirb.timtim.mapeirb.presenter.activities.SelectionScreenActivity"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_selection_screen_height_null"
            android:layout_weight="20"
            android:text="@string/selection_screen_title"
            android:gravity="center"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_selection_screen_height_null"
            android:layout_weight="40"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/selectionscreen_button_electric_car"
                android:layout_width="@dimen/content_selection_screen_width_null"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="@dimen/content_selection_screen_button_poi_textSize"
                android:text="@string/icon_electric_car"/>

            <Button
                android:id="@+id/selectionscreen_button_defibrilator"
                android:layout_width="@dimen/content_selection_screen_width_null"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="@dimen/content_selection_screen_button_poi_textSize"
                android:textColor="@color/colorGreen"
                android:text="@string/icon_defibrillator"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_selection_screen_height_null"
            android:layout_weight="40"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/selectionscreen_button_internet_access"
                android:layout_width="@dimen/content_selection_screen_null_width"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="@dimen/content_selection_screen_button_poi_textSize"
                android:textColor="@color/colorBlue"
                android:text="@string/icon_internet_access"/>

            <Button
                android:id="@+id/selectionscreen_button_toilets"
                android:layout_width="@dimen/content_selection_screen_null_width"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="@dimen/content_selection_screen_button_poi_textSize"
                android:text="@string/icon_toilets"/>

        </LinearLayout>




    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
